--- a/src/index.scss
+++ b/src/index.scss
@@ -5,3 +5,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.container {
+  width: 90%;
+  margin: 0 auto;
+}
